--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Área Exclusiva | MOSCHIAT</title>
   <style>
@@ -12,13 +12,7 @@
       --highlight: #25d366;
       --text-glow: 0 0 10px #fff, 0 0 20px #00f, 0 0 30px #0ff;
     }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
       font-family: 'Segoe UI', sans-serif;
@@ -26,15 +20,13 @@
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
       color: #fff;
-      overflow-x: hidden;
+      overflow: hidden;
     }
-
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
     #password-overlay {
       position: fixed;
       top: 0; left: 0;
@@ -46,7 +38,6 @@
       justify-content: center;
       z-index: 1000;
     }
-
     .card {
       background: #111;
       border-radius: 16px;
@@ -54,7 +45,6 @@
       box-shadow: 0 0 25px rgba(255, 255, 255, 0.1);
       text-align: center;
     }
-
     input[type="password"] {
       padding: 10px;
       width: 100%;
@@ -64,7 +54,6 @@
       background: #333;
       color: #fff;
     }
-
     .btn {
       background: var(--highlight);
       border: none;
@@ -74,84 +63,15 @@
       cursor: pointer;
       margin-top: 10px;
     }
+    .btn:hover { background: #1ebe5b; }
 
-    .btn:hover {
-      background: #1ebe5b;
-    }
-
-    #main-content {
-      opacity: 0;
-      filter: blur(20px);
-      transition: all 1s ease;
-    }
-
-    nav {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      backdrop-filter: blur(10px);
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      color: var(--highlight);
-    }
-
-    .intro {
-      text-align: center;
-      padding: 4rem 2rem;
-      font-size: 1.2rem;
-    }
-
-    .word-cloud {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 12px;
-      padding: 2rem;
-    }
-
-    .word {
-      font-size: 1.3rem;
-      background: linear-gradient(45deg, #00f0ff, #ff00f0);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: float 5s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-      100% { transform: translateY(0); }
-    }
-
-    .poem {
-      max-width: 700px;
-      margin: 30px auto;
-      font-style: italic;
-      text-align: center;
-      font-size: 1.1rem;
-      line-height: 1.6;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      background: rgba(0, 0, 0, 0.4);
-      font-size: 0.9rem;
-    }
-
-    .hidden {
-      display: none;
+    canvas {
+      display: block;
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
     }
   </style>
 </head>
@@ -166,68 +86,70 @@
     </div>
   </div>
 
-  <div id="main-content">
-    <nav>
-      <div><strong>MOSCHIAT</strong></div>
-      <div>
-        <a href="#">Curadoria Musical</a>
-        <a href="#">Playlist</a>
-        <a href="#">Serviços</a>
-      </div>
-    </nav>
+  <canvas id="webgl" class="hidden"></canvas>
 
-    <section class="intro">
-      <h2>Seja bem-vindo ao universo criativo do MOSCHIAT.</h2>
-      <p>Arte, caos, propósito, pulsação. Este espaço é um portal entre o real e o imaterial.</p>
-    </section>
+  <script type="module">
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
+    import { SVGLoader } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/loaders/SVGLoader.js';
 
-    <div class="word-cloud">
-      <span class="word">nômade</span><span class="word">etéreo</span><span class="word">intuição</span>
-      <span class="word">realidade</span><span class="word">fluxo</span><span class="word">moschiat</span>
-      <span class="word">código</span><span class="word">origem</span><span class="word">espiral</span>
-      <span class="word">ressonância</span><span class="word">despertar</span><span class="word">vórtice</span>
-    </div>
+    const canvas = document.getElementById('webgl');
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.z = 100;
 
-    <div class="poem">🌌<br>Em cada traço, um universo escondido,<br>A arte revela o que está contido.<br>Num piscar, nasce o infinito,<br>Onde o silêncio é também um grito.</div>
-    <div class="poem">As cores dançam no espaço do ser,<br>Fragmentos de um sonho a florescer.<br>Real e irreal se entrelaçam,<br>E os limites se desfazem — passam.</div>
-    <div class="poem">No caos, encontro beleza,<br>Na falha, uma fortaleza.<br>O estranho é meu lugar,<br>E nele aprendo a voar.</div>
+    const renderer = new THREE.WebGLRenderer({ canvas, alpha: true, antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
 
-    <footer>
-      &copy; 2025 MOSCHIAT • Arte. Código. Liberdade.
-    </footer>
-  </div>
+    const loader = new SVGLoader();
+    const svgData = `
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 100">
+        <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle"
+              font-size="60" font-family="Arial Black" fill="white">MOSCHIAT</text>
+      </svg>
+    `;
+    const blob = new Blob([svgData], { type: 'image/svg+xml' });
+    const url = URL.createObjectURL(blob);
 
-  <script>
-    function hashCode(str) {
-      let hash = 0;
-      for (let i = 0; i < str.length; i++) {
-        hash = ((hash << 5) - hash) + str.charCodeAt(i);
-        hash |= 0;
-      }
-      return hash;
+    let group;
+    loader.load(url, (data) => {
+      group = new THREE.Group();
+      data.paths.forEach((path) => {
+        const shapes = SVGLoader.createShapes(path);
+        shapes.forEach((shape) => {
+          const geometry = new THREE.ShapeGeometry(shape);
+          const material = new THREE.MeshBasicMaterial({ color: 0xffffff, side: THREE.DoubleSide });
+          const mesh = new THREE.Mesh(geometry, material);
+          group.add(mesh);
+        });
+      });
+      group.scale.set(0.25, -0.25, 0.25);
+      group.position.x = -50;
+      scene.add(group);
+    });
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+
+    function animate() {
+      requestAnimationFrame(animate);
+      if (group) group.rotation.y += 0.005;
+      renderer.render(scene, camera);
     }
+    animate();
 
+    // Função de senha
     function checkPassword() {
-      const password = document.getElementById("password").value;
-      if (hashCode(password) === 1826857162) {
-        document.getElementById("password-overlay").style.display = "none";
-        const main = document.getElementById("main-content");
-        main.style.opacity = "1";
-        main.style.filter = "none";
-        localStorage.setItem("accessGranted", "true");
+      const input = document.getElementById('password').value;
+      if (input === 'moschiat123') {
+        document.getElementById('password-overlay').style.display = 'none';
+        canvas.classList.remove('hidden');
       } else {
-        alert("Senha incorreta.");
+        alert("Senha incorreta, tente 'moschiat123'.");
       }
     }
-
-    window.onload = () => {
-      if (localStorage.getItem("accessGranted") === "true") {
-        document.getElementById("password-overlay").style.display = "none";
-        const main = document.getElementById("main-content");
-        main.style.opacity = "1";
-        main.style.filter = "none";
-      }
-    };
   </script>
 </body>
 </html>
