--- a/home.html
+++ b/home.html
@@ -1,182 +1,163 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Área Exclusiva | MOSCHIAT</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    #main-content {
-      filter: blur(10px);
-      opacity: 0.5;
-      transition: filter 0.5s, opacity 0.5s;
+    :root {
+      --grad1: #0f0c29;
+      --grad2: #302b63;
+      --grad3: #24243e;
+      --highlight: #25d366;
     }
-    #password-overlay {
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+
+    html, body {
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
+      overflow: hidden;
+    }
+
+    /* Splash screen */
+    #splash {
+      background: #000;
       position: fixed;
       top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(255, 255, 255, 0.95);
+      width: 100vw; height: 100vh;
       display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 2000;
+      animation: fadeOut 1s ease 5s forwards;
+    }
+
+    svg {
+      width: 80%;
+      height: auto;
+    }
+
+    .path {
+      fill: none;
+      stroke: #00ffae;
+      stroke-width: 3;
+      stroke-dasharray: 1000;
+      stroke-dashoffset: 1000;
+      animation: draw 4s ease forwards;
+    }
+
+    @keyframes draw {
+      to { stroke-dashoffset: 0; }
+    }
+
+    @keyframes fadeOut {
+      to {
+        opacity: 0;
+        visibility: hidden;
+      }
+    }
+
+    /* Conteúdo principal */
+    #main-content {
+      background: linear-gradient(-45deg, var(--grad1), var(--grad2), var(--grad3));
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      color: #fff;
+      width: 100%;
+      height: 100vh;
+      display: none;
       align-items: center;
       justify-content: center;
-      z-index: 1000;
     }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .card {
-      max-width: 400px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .btn-whatsapp { background: #25d366; color: white; font-weight: bold; }
-    .btn-whatsapp:hover { background: #1ebe5b; }
-    .footer-links a { margin: 0 10px; color: #0066cc; }
-
-    /* Animação das palavras */
-    .word-cloud {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
+      background: rgba(17, 17, 17, 0.8);
+      border-radius: 16px;
       padding: 30px;
-    }
-    .word {
-      font-size: 1.2rem;
-      font-weight: bold;
-      animation: float 6s ease-in-out infinite;
-      background: linear-gradient(to right, #0099ff, #ff66cc);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    @keyframes float {
-      0%   { transform: translateY(0px); opacity: 1; }
-      50%  { transform: translateY(-10px); opacity: 0.7; }
-      100% { transform: translateY(0px); opacity: 1; }
+      box-shadow: 0 0 25px rgba(255, 255, 255, 0.1),
+                  0 0 50px rgba(37, 211, 102, 0.3);
+      text-align: center;
+      position: relative;
+      overflow: hidden;
     }
 
-    .poem { margin: 40px auto; max-width: 700px; font-style: italic; font-size: 1.1rem; }
+    .card::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(to bottom right, rgba(255,255,255,0) 0%, rgba(255,255,255,0.1) 20%, rgba(255,255,255,0) 40%);
+      transform: rotate(30deg);
+      animation: shine 3s infinite;
+    }
+
+    @keyframes shine {
+      0% { transform: rotate(30deg) translate(-30%, -30%); }
+      100% { transform: rotate(30deg) translate(30%, 30%); }
+    }
+
+    input[type="password"] {
+      padding: 15px;
+      width: 100%;
+      margin: 20px 0;
+      border-radius: 8px;
+      border: 2px solid #333;
+      background: rgba(51, 51, 51, 0.5);
+      color: #fff;
+      font-size: 16px;
+    }
+
+    input[type="password"]:focus {
+      outline: none;
+      border-color: var(--highlight);
+      box-shadow: 0 0 10px rgba(37, 211, 102, 0.5);
+    }
+
+    .btn {
+      background: var(--highlight);
+      border: none;
+      padding: 12px 25px;
+      font-weight: bold;
+      border-radius: 6px;
+      color: #000;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <div id="password-overlay">
-    <div class="card">
-      <h4>Área Exclusiva</h4>
-      <p>Tenha acesso a Fotografias, PDFs, Vídeos e Insights.<br>"A arte é o que eu faço você ver".</p>
-      <form id="password-form">
-        <div class="form-group">
-          <input type="password" class="form-control" id="password" placeholder="Senha de acesso" required>
-        </div>
-        <button type="button" class="btn btn-whatsapp btn-block" onclick="checkPassword()">Entrar</button>
-      </form>
-      <a href="#" class="btn btn-primary btn-sm mt-3">Comprar acesso</a>
-    </div>
+
+<!-- Splash screen -->
+<div id="splash">
+  <svg viewBox="0 0 800 200">
+    <text x="50" y="140" font-size="120" font-family="Arial Black, sans-serif" class="path">MOSCHIAT</text>
+  </svg>
+</div>
+
+<!-- Conteúdo principal -->
+<div id="main-content">
+  <div class="card">
+    <h2>Área Exclusiva</h2>
+    <p>Digite a senha para continuar:</p>
+    <input type="password" placeholder="Senha..." />
+    <button class="btn">Entrar</button>
   </div>
+</div>
 
-  <div id="main-content">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">MOSCHIAT</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="#">Curadoria Musical</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Playlist</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Serviços</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<script>
+  // Exibir conteúdo principal após splash
+  setTimeout(() => {
+    document.getElementById("main-content").style.display = "flex";
+  }, 5000); // corresponde ao tempo de animação + fadeOut
+</script>
 
-    <div class="container text-center my-4">
-      <h2>Bem-vindo!</h2>
-      <p>Sou apaixonado por criatividade e inovação. Este espaço é um reflexo da minha jornada criativa.</p>
-    </div>
-
-    <div class="word-cloud">
-      <!-- 27 palavras aleatórias -->
-      <span class="word">imaginário</span><span class="word">nômade</span><span class="word">sintético</span>
-      <span class="word">fluido</span><span class="word">metaverso</span><span class="word">ressonância</span>
-      <span class="word">intuição</span><span class="word">vórtice</span><span class="word">colapso</span>
-      <span class="word">origem</span><span class="word">luz</span><span class="word">espiral</span>
-      <span class="word">frequência</span><span class="word">transcender</span><span class="word">realidade</span>
-      <span class="word">código</span><span class="word">fluxo</span><span class="word">infinito</span>
-      <span class="word">criar</span><span class="word">despertar</span><span class="word">analógico</span>
-      <span class="word">visão</span><span class="word">desconhecido</span><span class="word">onda</span>
-      <span class="word">etéreo</span><span class="word">pulsar</span><span class="word">moschiat</span>
-    </div>
-
-    <div class="container">
-      <div class="poem">🌌<br>
-        Em cada traço, um universo escondido,<br>
-        A arte revela o que está contido.<br>
-        Num piscar, nasce o infinito,<br>
-        Onde o silêncio é também um grito.
-      </div>
-      <div class="poem">
-        As cores dançam no espaço do ser,<br>
-        Fragmentos de um sonho a florescer.<br>
-        Real e irreal se entrelaçam,<br>
-        E os limites se desfazem — passam.
-      </div>
-      <div class="poem">
-        Vibração que pulsa dentro do som,<br>
-        Como ondas do mar em tom.<br>
-        O ritmo é um portal,<br>
-        Para um mundo imaterial.
-      </div>
-      <div class="poem">
-        Crio para lembrar quem sou,<br>
-        No traço imperfeito onde vou.<br>
-        Não é destino nem fim,<br>
-        É o agora, dentro de mim.
-      </div>
-      <div class="poem">
-        No caos, encontro beleza,<br>
-        Na falha, uma fortaleza.<br>
-        O estranho é meu lugar,<br>
-        E nele aprendo a voar.
-      </div>
-    </div>
-
-    <footer class="text-center py-4">
-      <p>&copy; 2025 MOSCHIAT. Todos os direitos reservados.</p>
-    </footer>
-  </div>
-
-  <script>
-    function hashCode(str) {
-      let hash = 0;
-      for (let i = 0; i < str.length; i++) {
-        hash = ((hash << 5) - hash) + str.charCodeAt(i);
-        hash |= 0;
-      }
-      return hash;
-    }
-
-    function checkPassword() {
-      var password = document.getElementById('password').value;
-      if (hashCode(password) === 1826857162) { // hash para "123amor"
-        document.getElementById('password-overlay').style.display = 'none';
-        document.getElementById('main-content').style.filter = 'none';
-        document.getElementById('main-content').style.opacity = '1';
-        localStorage.setItem('accessGranted', 'true');
-      } else {
-        alert('Senha incorreta!');
-      }
-    }
-
-    window.onload = function() {
-      if (localStorage.getItem('accessGranted') === 'true') {
-        document.getElementById('password-overlay').style.display = 'none';
-        document.getElementById('main-content').style.filter = 'none';
-        document.getElementById('main-content').style.opacity = '1';
-      }
-    };
-  </script>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
