--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
 
     <main id="main-content">
         <div class="access-card">
-            <h1>Acesso Exclusivo</h1>
-            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgEMPwEi1sIZv-5HrT4b6bXmxcJzch9kl23AnBu6GtC8vz2-t0jaZEpNBcAgIRVv6OpGxWc_uoDIDykUNiykBeAKMME_XJlOil24y1oXkMhJZog02dHwgEPpaZcWK5aPM9WQE3vMSjtXGQeQP3jDpWZSVYPehxhXINf57BsZjFHdlyw8jDN-e_N4IXLN3lT/s1600/1.png" 
+            <h1>MOSCHIAT - 2025</h1>
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgsgyBKHOEJXsqqUNvvG0evhMynW35Ata7d3PIVeUNccG_eIsPU2EQ8Bvc9iPyr_0Q0Cwe15M6KQUzxRyDtyCD-dHWdguIE371NAPKqp_4pqunFzirjYAjO6bfCeN1q7XabkZiOZ0VcxMyZSUGrxFmQ7_F4Jo5mkokdxfna-8-rkk59TICOrEzjhijrG000/s1600/00566.png" 
                  alt="Imagem de acesso" class="access-image">
-            <p>Para prosseguir e explorar meu universo criativo, por favor, digite a senha:</p>
-            <input type="password" id="passwordInput" class="password-input" placeholder="Sua Senha Secreta..." autocomplete="off" aria-label="Campo para digitar a senha">
+            <p>Só os atentos encontram o que não é dito.”</p>
+            <input type="password" id="passwordInput" class="password-input" placeholder="Digite a senha" autocomplete="off" aria-label="Campo para digitar a senha">
             <button id="enterButton" class="btn-enter">Entrar</button>
         </div>
     </main>
