--- a/index.html
+++ b/index.html
@@ -199,14 +199,15 @@
     <main id="main-content">
         <div class="access-card">
             <h1>MOSCHIAT</h1>
-            <p>the yesterday price is not today prince</p>
-            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgsgyBKHOEJXsqqUNvvG0evhMynW35Ata7d3PIVeUNccG_eIsPU2EQ8Bvc9iPyr_0Q0Cwe15M6KQUzxRyDtyCD-dHWdguIE371NAPKqp_4pqunFzirjYAjO6bfCeN1q7XabkZiOZ0VcxMyZSUGrxFmQ7_F4Jo5mkokdxfna-8-rkk59TICOrEzjhijrG000/s1600/00566.png" alt="Imagem de acesso" class="access-image">
+            <p>the yesterday price is not today price</p>
             <p>Só os atentos encontram o que não é dito.</p>
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgsgyBKHOEJXsqqUNvvG0evhMynW35Ata7d3PIVeUNccG_eIsPU2EQ8Bvc9iPyr_0Q0Cwe15M6KQUzxRyDtyCD-dHWdguIE371NAPKqp_4pqunFzirjYAjO6bfCeN1q7XabkZiOZ0VcxMyZSUGrxFmQ7_F4Jo5mkokdxfna-8-rkk59TICOrEzjhijrG000/s1600/00566.png" alt="Imagem de acesso" class="access-image">
+            
             <input type="password" id="passwordInput" class="password-input" placeholder="Digite a senha" autocomplete="off" aria-label="Campo para digitar a senha">
             <button id="enterButton" class="btn-enter">Entrar</button>
         </div>
     </main>
-
+<p>ROOTSPOLOGETIC</p>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const passwordInput = document.getElementById("passwordInput");
