--- a/teste.html
+++ b/teste.html
@@ -1,74 +1,190 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOSCHIAT</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-            overflow: hidden;
-        }
-        #authContainer {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px white;
-        }
-        #mainContent {
-            filter: blur(10px);
-            transition: filter 0.5s;
-        }
-        img {
-            width: 100px;
-            height: 100px;
-            display: block;
-            margin: auto;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Área Exclusiva | MOSCHIAT</title>
+  <style>
+    :root {
+      --grad1: #0f0c29;
+      --grad2: #302b63;
+      --grad3: #24243e;
+      --highlight: #25d366;
+      --shadow: rgba(37, 211, 102, 0.25);
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+
+    html, body {
+      width: 100%;
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
+      overflow: hidden;
+      background: linear-gradient(-45deg, var(--grad1), var(--grad2), var(--grad3));
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      color: #fff;
+    }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    #splash {
+      background: #000;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 100;
+      animation: fadeOut 1s ease 5s forwards;
+    }
+
+    svg {
+      width: 70%;
+      height: auto;
+    }
+
+    .path {
+      fill: none;
+      stroke: var(--highlight);
+      stroke-width: 3;
+      stroke-dasharray: 1000;
+      stroke-dashoffset: 1000;
+      animation: draw 4s ease forwards;
+    }
+
+    @keyframes draw {
+      to { stroke-dashoffset: 0; }
+    }
+
+    @keyframes fadeOut {
+      to {
+        opacity: 0;
+        visibility: hidden;
+      }
+    }
+
+    #main-content {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .card {
+      background: rgba(17, 17, 17, 0.8);
+      border-radius: 16px;
+      padding: 40px;
+      box-shadow: 0 0 50px var(--shadow);
+      text-align: center;
+      width: 320px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .card::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(to bottom right, rgba(255,255,255,0) 0%, rgba(255,255,255,0.1) 20%, rgba(255,255,255,0) 40%);
+      transform: rotate(30deg);
+      animation: shine 3s infinite;
+    }
+
+    @keyframes shine {
+      0% { transform: rotate(30deg) translate(-30%, -30%); }
+      100% { transform: rotate(30deg) translate(30%, 30%); }
+    }
+
+    input[type="password"] {
+      padding: 15px;
+      width: 100%;
+      margin: 20px 0;
+      border-radius: 8px;
+      border: 2px solid #333;
+      background: rgba(51, 51, 51, 0.5);
+      color: #fff;
+      font-size: 16px;
+    }
+
+    input[type="password"]:focus {
+      outline: none;
+      border-color: var(--highlight);
+      box-shadow: 0 0 10px var(--shadow);
+    }
+
+    .btn {
+      background: var(--highlight);
+      border: none;
+      padding: 12px 25px;
+      font-weight: bold;
+      border-radius: 6px;
+      color: #000;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
+      background: #00ffae;
+    }
+  </style>
 </head>
 <body>
-    <h1>MOSCHIAT</h1>
-    <div id="authContainer">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="Imagem de autenticação">
-        <p>Digite a senha para acessar:</p>
-        <input type="password" id="passwordInput">
-        <button onclick="checkPassword()">Entrar</button>
-    </div>
-    <div id="mainContent">
-        <h2>Bem-vindo ao site!</h2>
-        <p>Este site é dedicado ao universo do Blender! Aqui você encontrará dicas, tutoriais e projetos envolvendo modelagem 3D, texturização e animação. Explore técnicas avançadas, descubra novos workflows e aprimore suas habilidades com a poderosa ferramenta de criação 3D.</p>
-     <p>Este site é dedicado ao universo do Blender! Aqui você encontrará dicas, tutoriais e projetos envolvendo modelagem 3D, texturização e animação. Explore técnicas avançadas, descubra novos workflows e aprimore suas habilidades com a poderosa ferramenta de criação 3D.</p>
-     <p>Este site é dedicado ao universo do Blender! Aqui você encontrará dicas, tutoriais e projetos envolvendo modelagem 3D, texturização e animação. Explore técnicas avançadas, descubra novos workflows e aprimore suas habilidades com a poderosa ferramenta de criação 3D.</p>
-     <p>Este site é dedicado ao universo do Blender! Aqui você encontrará dicas, tutoriais e projetos envolvendo modelagem 3D, texturização e animação. Explore técnicas avançadas, descubra novos workflows e aprimore suas habilidades com a poderosa ferramenta de criação 3D.</p>
-    </div>
-    <script>
-        setTimeout(() => {
-            document.getElementById('authContainer').style.display = 'block';
-        }, 3000);
 
-        function checkPassword() {
-            const password = document.getElementById('passwordInput').value;
-            if (password === "123") {
-                document.getElementById('authContainer').style.display = 'none';
-                document.getElementById('mainContent').style.filter = 'blur(0)';
-            } else {
-                alert('Senha incorreta!');
-            }
-        }
-    </script>
+<!-- Splash screen -->
+<div id="splash">
+  <svg viewBox="0 0 800 200">
+    <text x="50" y="140" font-size="120" font-family="Arial Black, sans-serif" class="path">MOSCHIAT</text>
+  </svg>
+</div>
+
+<!-- Conteúdo principal -->
+<div id="main-content">
+  <div class="card">
+    <h2>Área Restrita</h2>
+    <p>Digite a senha para continuar:</p>
+    <input type="password" id="password" placeholder="Senha..." />
+    <button class="btn" id="enterBtn">Entrar</button>
+  </div>
+</div>
+
+<script>
+  // Exibir conteúdo após splash
+  setTimeout(() => {
+    document.getElementById("main-content").style.display = "flex";
+  }, 5000);
+
+  // Autenticação com hash SHA-256
+  const PASSWORD_HASH = "6db04c67c3010a3a72b1fd04b9704a544260c51df93208e525abc9d0b9df4743"; // MOSCHIAT2025
+
+  async function sha256Hex(str) {
+    const enc = new TextEncoder();
+    const data = enc.encode(str);
+    const hashBuffer = await crypto.subtle.digest('SHA-256', data);
+    const hashArray = Array.from(new Uint8Array(hashBuffer));
+    return hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+  }
+
+  document.getElementById('enterBtn').addEventListener('click', async () => {
+    const val = document.getElementById('password').value;
+    const h = await sha256Hex(val);
+    if (h === PASSWORD_HASH) {
+      window.location.href = "dashboard.html";
+    } else {
+      alert("Senha incorreta.");
+    }
+  });
+</script>
+
 </body>
 </html>
